[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/crab/crab_ske.json" type="GDDragonBonesResource" id=1]
[ext_resource path="res://assets/crab/crab_tex.png" type="Texture" id=2]
[ext_resource path="res://_scripts/player/CrabKine.gd" type="Script" id=3]
[ext_resource path="res://assets/crab/crab-3.png" type="Texture" id=4]
[ext_resource path="res://assets/crab/crab-4.png" type="Texture" id=5]
[ext_resource path="res://assets/crab/crab-5.png" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=6]
radius = 8.10189

[sub_resource type="Animation" id=1]
resource_name = "claw_attack"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/ClawAbove:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 122.0, 145.387, 155.702, 100.716, 122.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/ClawAbove:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -32.4758, -12.8804 ), Vector2( -34.7233, -15.5024 ), Vector2( -36.9707, -18.8736 ), Vector2( -34.7233, -15.5024 ), Vector2( -32.4758, -12.8804 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/ClawUnder:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -40.8872, -2.23308 ), Vector2( -40.6999, 0.201677 ), Vector2( -43.1346, -1.48393 ), Vector2( -40.8872, -2.23308 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/ClawUnder:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 60.1161, 36.8195, 11.9751, 65.7894, 60.1161 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("../..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_hit"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.38964, 1.38964 ), Vector2( 1.38964, 1.38964 ), Vector2( 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath(".:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -23, -12 ), Vector2( -9.22699, -12 ), Vector2( -9.22699, -12 ), Vector2( -23, -12 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "claw_attack_fast"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/ClawAbove:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0613209, 0.101691, 0.149882, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 122.0, 168.975, 100.716, 100.716, 122.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/ClawAbove:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0613209, 0.101691, 0.149882, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -32.4758, -12.8804 ), Vector2( -37.7653, -28.1439 ), Vector2( -34.7233, -15.5024 ), Vector2( -34.7233, -15.5024 ), Vector2( -32.4758, -12.8804 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/ClawUnder:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.0613209, 0.101691, 0.149882, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -40.8872, -2.23308 ), Vector2( -39.1107, 5.23413 ), Vector2( -43.1346, -1.48393 ), Vector2( -43.1346, -1.48393 ), Vector2( -40.8872, -2.23308 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/ClawUnder:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.0613209, 0.101691, 0.149882, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 60.1161, 11.9751, 65.7894, 65.7894, 60.1161 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("../..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.101691, 0.149882 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "attack_hit"
}, {
"args": [  ],
"method": "attack_hit"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprites:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.0613209, 0.150687, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.40347, 1.40347 ), Vector2( 1.40347, 1.40347 ), Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprites:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.0613209, 0.150687, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 21.5667, 9.19239 ), Vector2( 21.5667, 9.19239 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "hold"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 61.4134, 50.1742, 55.0994 ]
}

[sub_resource type="Animation" id=8]
resource_name = "lose"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 55.0994, 0.0 ]
}

[sub_resource type="CapsuleShape2D" id=3]
radius = 40.8083
height = 19.478

[sub_resource type="CircleShape2D" id=4]
radius = 3.4955

[sub_resource type="Animation" id=5]
resource_name = "stunned"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Stars:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Stars:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="CrabKine" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
collision/safe_margin = 0.2
motion/sync_to_physics = true
script = ExtResource( 3 )
MOVE_SPEED = 300
JUMP_SPEED = 600
GRAVITY_SPEED = 70.0
JUMP_TIME_LIMIT = 0.5

[node name="Crab" type="Node2D" parent="."]

[node name="ClawPos" type="Position2D" parent="Crab"]
position = Vector2( -23, -12 )

[node name="ClawDefend" type="Position2D" parent="Crab"]
position = Vector2( 0, 23 )

[node name="Claws" type="Node2D" parent="Crab" groups=[
"claw",
]]
position = Vector2( -23, -12 )

[node name="Sprites" type="Node2D" parent="Crab/Claws"]

[node name="ClawUnder" type="Sprite" parent="Crab/Claws/Sprites"]
position = Vector2( -40.8872, -2.23308 )
rotation = 1.04922
texture = ExtResource( 5 )

[node name="ClawAbove" type="Sprite" parent="Crab/Claws/Sprites"]
position = Vector2( -32.4758, -12.8804 )
rotation = 2.1293
texture = ExtResource( 4 )

[node name="Coll" type="CollisionShape2D" parent="Crab/Claws"]
position = Vector2( -56.3397, -7.69159 )
shape = SubResource( 6 )

[node name="Tween" type="Tween" parent="Crab/Claws"]

[node name="Anim" type="AnimationPlayer" parent="Crab/Claws"]
anims/claw_attack = SubResource( 1 )
anims/claw_attack_fast = SubResource( 2 )

[node name="Body" type="Node2D" parent="Crab"]
position = Vector2( -31.1127, -21.2132 )

[node name="CrabBones" type="GDDragonBones" parent="Crab/Body"]
position = Vector2( 36.416, 18.3848 )
texture = ExtResource( 2 )
resource = ExtResource( 1 )
playback/speed = 2.0
playback/curr_animation = "idle"

[node name="Anim" type="AnimationPlayer" parent="Crab/Body"]
anims/hold = SubResource( 7 )
anims/lose = SubResource( 8 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 2.62204, -4.12035 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="Stars" type="Node2D" parent="."]
visible = false
position = Vector2( -32.0487, -46.0866 )
rotation = 1.25664

[node name="crab-5" type="Sprite" parent="Stars"]
position = Vector2( -20.4705, -9.48663 )
rotation = 0.785398
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 6 )

[node name="crab-6" type="Sprite" parent="Stars"]
position = Vector2( 20.7296, 1.88772 )
rotation = 1.72788
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 6 )

[node name="GroundCheck" type="Area2D" parent="."]
visible = false
position = Vector2( 0, 37.195 )
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
linear_damp = 0.0
collision_layer = 0

[node name="Coll" type="CollisionShape2D" parent="GroundCheck"]
shape = SubResource( 4 )

[node name="Anim" type="AnimationPlayer" parent="."]
anims/stunned = SubResource( 5 )

[connection signal="body_entered" from="GroundCheck" to="." method="_on_GroundCheck_body_entered"]
[connection signal="body_exited" from="GroundCheck" to="." method="_on_GroundCheck_body_exited"]
